<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckground"
    tools:context=".DetalleFrase">

    <TextView
        android:id="@+id/txtId"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginEnd="49dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/bck_boton"
        android:fontFamily="casual"
        android:text="@string/textoDefault"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblId"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <TextView
        android:id="@+id/txtFrase"
        android:layout_width="0dp"
        android:layout_height="129dp"

        android:layout_marginEnd="59dp"
        android:background="@drawable/bck_boton"
        android:fontFamily="casual"
        android:text="@string/textoDefault"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/txtAutor"
        android:layout_width="0dp"
        android:layout_height="35dp"

        android:layout_marginEnd="50dp"
        android:background="@drawable/bck_boton"
        android:fontFamily="casual"
        android:text="@string/textoDefault"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblAutor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblAutor" />

    <ImageView
        android:id="@+id/imagenFrase"
        android:layout_width="258dp"
        android:layout_height="197dp"
        android:layout_marginBottom="133dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAutor" />

    <TextView
        android:id="@+id/lblId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="19dp"
        android:fontFamily="casual"
        android:text="@string/idI"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtId"
        app:layout_constraintEnd_toStartOf="@+id/txtId"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="73dp"
        android:fontFamily="casual"
        android:text="@string/autorI"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imagenFrase"
        app:layout_constraintEnd_toStartOf="@+id/txtAutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="49dp"
        android:fontFamily="casual"
        android:text="@string/infoFrase"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/txtId"
        app:layout_constraintEnd_toEndOf="@+id/txtId"
        app:layout_constraintStart_toEndOf="@+id/lblId"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="116dp"
        android:fontFamily="casual"
        android:text="@string/fraseI"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lblAutor"
        app:layout_constraintEnd_toStartOf="@+id/txtFrase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtId" />
</androidx.constraintlayout.widget.ConstraintLayout>